--- a/IQKeyboardManager451-demo/Base.lproj/Main.storyboard
+++ b/IQKeyboardManager451-demo/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="IQKeyboardManager451_demo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,7 +17,89 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Cs-WR-WSb" customClass="FieldWrapperView" customModule="IQKeyboardManager451_demo" customModuleProvider="target">
+                                <rect key="frame" x="20" y="20" width="560" height="580"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R0h-3J-0KZ">
+                                        <rect key="frame" x="160" y="133" width="240" height="70"/>
+                                        <subviews>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zMa-eX-8lk">
+                                                <rect key="frame" x="20" y="20" width="200" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="200" id="it2-dd-tb8"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="zMa-eX-8lk" firstAttribute="top" secondItem="R0h-3J-0KZ" secondAttribute="top" constant="20" id="4Jd-oN-BHM"/>
+                                            <constraint firstItem="zMa-eX-8lk" firstAttribute="leading" secondItem="R0h-3J-0KZ" secondAttribute="leading" constant="20" id="769-tG-lbQ"/>
+                                            <constraint firstAttribute="bottom" secondItem="zMa-eX-8lk" secondAttribute="bottom" constant="20" id="hKi-oz-3FB"/>
+                                            <constraint firstAttribute="trailing" secondItem="zMa-eX-8lk" secondAttribute="trailing" constant="20" id="oHO-UV-iWg"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IGh-X1-mL7">
+                                        <rect key="frame" x="160" y="246" width="240" height="70"/>
+                                        <subviews>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oX9-TQ-SkE">
+                                                <rect key="frame" x="20" y="20" width="200" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="200" id="9Xv-4H-7af"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="oX9-TQ-SkE" firstAttribute="top" secondItem="IGh-X1-mL7" secondAttribute="top" constant="20" id="1hq-2T-L7a"/>
+                                            <constraint firstAttribute="bottom" secondItem="oX9-TQ-SkE" secondAttribute="bottom" constant="20" id="4bi-F1-gH9"/>
+                                            <constraint firstAttribute="trailing" secondItem="oX9-TQ-SkE" secondAttribute="trailing" constant="20" id="Ty5-PO-dWR"/>
+                                            <constraint firstItem="oX9-TQ-SkE" firstAttribute="leading" secondItem="IGh-X1-mL7" secondAttribute="leading" constant="20" id="Uch-QB-QVz"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xfs-86-wdB">
+                                        <rect key="frame" x="160" y="342" width="240" height="70"/>
+                                        <subviews>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pdy-fD-fR5">
+                                                <rect key="frame" x="20" y="20" width="200" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="200" id="UlS-SH-li5"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="Pdy-fD-fR5" firstAttribute="top" secondItem="Xfs-86-wdB" secondAttribute="top" constant="20" id="4d3-yu-fKl"/>
+                                            <constraint firstItem="Pdy-fD-fR5" firstAttribute="leading" secondItem="Xfs-86-wdB" secondAttribute="leading" constant="20" id="9kN-Wl-hLB"/>
+                                            <constraint firstAttribute="trailing" secondItem="Pdy-fD-fR5" secondAttribute="trailing" constant="20" id="G4E-vj-xmL"/>
+                                            <constraint firstAttribute="bottom" secondItem="Pdy-fD-fR5" secondAttribute="bottom" constant="20" id="rra-YZ-5gl"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="Xfs-86-wdB" firstAttribute="top" secondItem="IGh-X1-mL7" secondAttribute="bottom" constant="26" id="5ZB-9R-7Bf"/>
+                                    <constraint firstItem="R0h-3J-0KZ" firstAttribute="centerX" secondItem="1Cs-WR-WSb" secondAttribute="centerX" id="5tn-HX-hAP"/>
+                                    <constraint firstItem="R0h-3J-0KZ" firstAttribute="top" secondItem="1Cs-WR-WSb" secondAttribute="top" constant="133" id="95E-zp-JMp"/>
+                                    <constraint firstItem="Xfs-86-wdB" firstAttribute="centerX" secondItem="1Cs-WR-WSb" secondAttribute="centerX" id="9Gy-lC-F1j"/>
+                                    <constraint firstItem="IGh-X1-mL7" firstAttribute="top" secondItem="R0h-3J-0KZ" secondAttribute="bottom" constant="43" id="Hm3-kK-Qhk"/>
+                                    <constraint firstItem="IGh-X1-mL7" firstAttribute="centerX" secondItem="1Cs-WR-WSb" secondAttribute="centerX" id="MR2-fn-YLR"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="1Cs-WR-WSb" secondAttribute="bottom" id="HtD-mc-1dT"/>
+                            <constraint firstItem="1Cs-WR-WSb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Ojt-2T-2WW"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="1Cs-WR-WSb" secondAttribute="trailing" id="pxK-DU-Ooe"/>
+                            <constraint firstItem="1Cs-WR-WSb" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="sOh-Vq-8fv"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
